# Minimum_Vertex_Cover

./: CMakeLists.txt  Min_Vert_Cover.cpp  README.md
